# VisionFT_Allegro

./: myAllegroHand.cpp  myAllegroHand.sln  myAllegroHand.vcxproj  myAllegroHand.vcxproj.filters
src/: BHand.cpp  BHandGain.cpp
src/bhand/: BHand.cpp  BHandGain.cpp  CMakeLists.txt
